force-app/main/default/objects/SystemSettings__c/SystemSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SystemSettings</label>
</CustomObject>