force-app/main/default/objects/SystemSettings__c/fields/AuspostDomain__c.field-meta.xml
<CustomField>
    <fullName>AuspostDomain__c</fullName>
    <businessOwnerGroup />
    <complianceGroup />
    <description>Domain name for Auspost website</description>
    <inlineHelpText>Domain name for Auspost website</inlineHelpText>
    <label>Auspost Domain</label>
    <type>Url</type>
</CustomField>