force-app/main/default/objects/SystemSettings__c/fields/DisableContactTrigger_ETEmail__c.field-meta.xml
<CustomField>
    <fullName>DisableContactTrigger_ETEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DisableContactTrigger_ETEmail</label>
    <type>Checkbox</type>
</CustomField>