force-app/main/default/objects/SystemSettings__c/fields/GSForm_useTestEmails__c.field-meta.xml
<CustomField>
    <fullName>GSForm_useTestEmails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked call call to action emails will be sent to the addresses specified in the GSForm_testEmailAddresses field</description>
    <label>GSForm_useTestEmails</label>
    <type>Checkbox</type>
</CustomField>